--- a/.github/Dockerfile
+++ b/.github/Dockerfile
@@ -1,10 +1,10 @@
 FROM debian:buster-slim as stage0
-COPY ./products/* /tea/
-RUN cp /tea/$(uname -m) /usr/local/bin/tea
+COPY ./products/* /pkgx/
+RUN cp /pkgx/$(uname -m) /usr/local/bin/pkgx
 RUN touch /root/.bash_profile
-RUN tea integrate
+RUN pkgx integrate
 
 FROM debian:buster-slim as stage1
-COPY --from=stage0 /usr/local/bin/tea /usr/local/bin/tea
+COPY --from=stage0 /usr/local/bin/pkgx /usr/local/bin/pkgx
 COPY --from=stage0 /root/.bash_profile /root/.bash_profile
 CMD ["bash"]
