--- a/.github/workflows/cd.docker.yml
+++ b/.github/workflows/cd.docker.yml
@@ -23,11 +23,11 @@ jobs:
 
       - name: Unpack Binaries
         run: |
-          for filename in tea-*+*+*.tar.xz; do
+          for filename in pkgx-*+*+*.tar.xz; do
             tar xJf $filename
             result="${filename#*+}"
             result="${result%.tar.xz}"
-            mv tea $result
+            mv pkgx $result
             rm $filename
           done
 
@@ -40,14 +40,14 @@ jobs:
           path: src
 
       - name: log in to github pkgs
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ github.token }}
 
       - name: log in to docker hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USER_NAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
@@ -57,7 +57,7 @@ jobs:
         with:
           images:
             ghcr.io/${{ github.repository }}
-            teaxyz/cli
+            pkgxdev/pkgx
           tags: |
             type=sha
             type=ref,event=branch
@@ -66,8 +66,8 @@ jobs:
             type=semver,pattern=v{{major}}
             type=raw,value=latest
 
-      - uses: docker/setup-qemu-action@v2
-      - uses: docker/setup-buildx-action@v2
+      - uses: docker/setup-qemu-action@v3
+      - uses: docker/setup-buildx-action@v3
 
       - name: docker/buildx
         run: |
