--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -23,7 +23,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [qa, integration-tests]
     env:
-      FILENAME: tea-${{ github.event.inputs.version }}
+      FILENAME: pkgx-${{ github.event.inputs.version }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -33,7 +33,7 @@ jobs:
       - name: stamp version.ts
         run: echo "export default function() { return '${{github.event.inputs.version}}' }" > $FILENAME/src/modes/version.ts
       - name: include GPG pubkey
-        run: echo ${{ secrets.GPG_PUBLIC_KEY }} | base64 -d > $FILENAME/tea.xyz.pub.asc
+        run: echo ${{ secrets.GPG_PUBLIC_KEY }} | base64 -d > $FILENAME/pkgx.xyz.pub.asc
       - run: tar cJf $FILENAME.tar.xz $FILENAME
       - name: attach srcs to release
         run: gh release upload --clobber
@@ -69,22 +69,21 @@ jobs:
     runs-on: ${{ matrix.platform.os }}
     name: ${{ matrix.platform.build-id }}
     env:
-      FILENAME: tea-${{ github.event.inputs.version }}+${{ matrix.platform.build-id }}.tar.xz
+      FILENAME: pkgx-${{ github.event.inputs.version }}+${{ matrix.platform.build-id }}.tar.xz
     steps:
       - uses: actions/download-artifact@v3
         with:
           name: srcs
 
-      - run: tar xJf tea-${{ github.event.inputs.version }}.tar.xz --strip-components=1
+      - run: tar xJf pkgx-${{ github.event.inputs.version }}.tar.xz --strip-components=1
 
-      - uses: teaxyz/setup@v0
+      - uses: teaxyz/setup@v1
         with:
-          srcroot: null  # due to v0/v1 issues here will be fixed with setup@v1
           +: deno.land
 
       - run: deno task compile
 
-      - uses: teaxyz/brewkit/actions/setup-codesign@v0
+      - uses: pkgxdev/brewkit/actions/setup-codesign@v0
         if: startsWith(matrix.platform.build-id, 'darwin+')
         with:
             p12-file-base64: ${{ secrets.APPLE_CERTIFICATE_P12 }}
@@ -92,22 +91,22 @@ jobs:
 
       # codesign always fails for deno binaries, even though it
       # signs fine. See https://github.com/denoland/deno/issues/575
-      - run: codesign --sign "$APPLE_IDENTITY" --force --preserve-metadata=entitlements,requirements,flags,runtime ./tea || true
+      - run: codesign --sign "$APPLE_IDENTITY" --force --preserve-metadata=entitlements,requirements,flags,runtime ./pkgx || true
         env:
           APPLE_IDENTITY: ${{ secrets.APPLE_IDENTITY }}
 
       - name: sanity check
-        run: test "$(./tea --version)" = "tea ${{ github.event.inputs.version }}"
+        run: test "$(./pkgx --version)" = "pkgx ${{ github.event.inputs.version }}"
 
-      - run: tar cJf $FILENAME tea
+      - run: tar cJf $FILENAME pkgx
 
       - name: GPG sign archive
         run: |
-          ./tea gpg-agent --daemon || true
+          ./pkgx gpg-agent --daemon || true
           echo $GPG_PRIVATE_KEY | \
             base64 -d | \
-            ./tea gpg --import --batch --yes
-          ./tea gpg \
+            ./pkgx gpg --import --batch --yes
+          ./pkgx gpg \
             --detach-sign --armor \
             --local-user $GPG_KEY_ID \
             $FILENAME
@@ -116,11 +115,11 @@ jobs:
           GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
 
       - name: attach product to release
-        run: ./tea gh release upload --clobber
+        run: ./pkgx gh release upload --clobber
           v${{ github.event.inputs.version }}
           $FILENAME $FILENAME.asc
         env:
           # using this token rather than github.token due to `release not found` bug
           # https://github.com/cli/cli/issues/5252
           GH_TOKEN: ${{ secrets.TEMP_JACOBS_GITHUB_PAT }}
-          GH_REPO: teaxyz/cli
+          GH_REPO: pkgxdev/pkgx
