--- a/deno.jsonc
+++ b/deno.jsonc
@@ -11,13 +11,13 @@
     "test": "deno test --allow-read=$PWD,$TMPDIR,$HOME,/ --allow-env --allow-write=$TMPDIR --allow-ffi --unstable",
     // ^^ ffi & unstable needed for execve.ts
 
-    // installs to ~/.local/bin/tea
-    "install": "deno task compile && ./tea +gnu.org/coreutils /usr/bin/sudo install -D ./tea /usr/local/bin/tea",
+    // installs to ~/.local/bin/pkgx
+    "install": "deno task compile && ./tea +gnu.org/coreutils /usr/bin/sudo install -D ./pkgx /usr/local/bin/pkgx",
 
     //--------------------------------------- ci/cd/admin
     "coverage" : "scripts/run-coverage.sh",
     "typecheck": "deno check --unstable ./entrypoint.ts",
-    "compile": "deno compile --allow-read --allow-write --allow-net --allow-run --allow-env --allow-ffi --unstable --output $INIT_CWD/tea ./entrypoint.ts"
+    "compile": "deno compile --allow-read --allow-write --allow-net --allow-run --allow-env --allow-ffi --unstable --output $INIT_CWD/pkgx ./entrypoint.ts"
   },
   "tea": {
     "dependencies": {
